--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Volunteer Sign-up</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -36,7 +36,7 @@
             <th scope="row">
               3
               <ol class="list-group list-group-inline">
-                <li class="grey nano not-bold content-fill">Vostok 3 & 6 launched</li>
+                <li class="grey nano not-bold island-1-4">Vostok 3 & 6 launched</li>
               </ol>
             </th>
             <td>4</td>
@@ -51,8 +51,8 @@
             <td>
               11
               <ol class="list-group list-group-inline">
-                <li class="red nano not-bold">Remembrance Day</li>
-                <li class="grey nano not-bold">Kosmos 21 failed to escape orbit</li>
+                <li class="red nano not-bold island-1-4">Remembrance Day</li>
+                <li class="grey nano not-bold island-1-4">Kosmos 21 failed to escape orbit</li>
               </ol>
             </td>
             <td>12</td>
@@ -61,8 +61,8 @@
             <td>
               15
               <ol class="list-group list-group-inline">
-                <li class="green nano not-bold">Surtsey Island created</li>
-                <li class="green nano not-bold">Robert W. Smith set altitude record</li>
+                <li class="green nano not-bold island-1-4">Surtsey Island created</li>
+                <li class="green nano not-bold island-1-4">Robert W. Smith set altitude record</li>
               </ol>
             </td>
             <td>16</td>
@@ -75,19 +75,19 @@
             <td>
               21
               <ol class="list-group list-group-inline">
-                <li class="grey nano not-bold">India launched its first rocket</li>
+                <li class="grey nano not-bold island-1-4">India launched its first rocket</li>
               </ol>
             </td>
             <td>
               22
               <ol class="list-group list-group-inline">
-                <li class="purple nano not-bold">Death of Aldous Huxley</li>
+                <li class="purple nano not-bold island-1-4">Death of Aldous Huxley</li>
               </ol>
             </td>
             <td>
               23
               <ol class="list-group list-group-inline">
-                <li class="purple nano not-bold">Doctor Who premiered</li>
+                <li class="purple nano not-bold island-1-4">Doctor Who premiered</li>
               </ol>
             </td>
           </tr>
@@ -97,7 +97,7 @@
             <td>
               26
               <ol class="list-group list-group-inline">
-                <li class="grey nano not-bold">Explorer 18 launched</li>
+                <li class="grey nano not-bold island-1-4">Explorer 18 launched</li>
               </ol>
             </td>
             <td>27</td>
